add all items to inventory action
add all items to inventory ui

--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="utf-8" />
     <title><%= htmlWebpackPlugin.options.title %></title>
+    <meta
+      name="description"
+      content="Defeat the not-implemented vivisectionist"
+    />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <meta name="darkreader-lock" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
